--- a/style.css
+++ b/style.css
@@ -1,24 +1,82 @@
-*{
-    margin : 0;
-    padding : 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Figtree", sans-serif;
+  color: hsl(0, 0%, 7%);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
-body{
-    display : flex;
-    justify-content: center;
-    align-items: center;
-    width : 100%;
-    height : 100svh;
-    background-color: hsl(47, 88%, 63%);
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100svh;
+  background-color: hsl(47, 88%, 63%);
 }
 
-article{
-    display : flex;
-    flex-direction: column;
-    gap : 24px;
-    width : 384px;
-    background-color: hsl(0, 0%, 100%);
-    border : 1px solid hsl(0, 0%, 7%);
+.article {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  width: 384px;
+  background-color: hsl(0, 0%, 100%);
+  border: 1px solid hsl(0, 0%, 7%);
+  padding: 24px;
+  border-radius: 20px;
+  box-shadow: 8px 8px 0 0 hsl(0, 0%, 7%);
+}
+.article_img {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.article_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.article_txt {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.article_txt-tag {
+  width: fit-content;
+  background-color: hsl(47, 88%, 63%);
+  padding: 4px 12px;
+  border-radius: 4px;
+  font-weight: 800;
+}
+.article_txt h1 {
+  font-size: 24px;
+  font-weight: 800;
+}
+.article_txt-description {
+  font-size: 16px;
+  color: hsl(0, 0%, 42%);
+}
+.article_author {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.article_author-img {
+  width: 32px;
+  height: 32px;
+  border-radius: 100vmax;
+}
+.article_author-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.article_author-name {
+  font-weight: 800;
 }
 
+/*# sourceMappingURL=style.css.map */
