--- a/style.css
+++ b/style.css
@@ -2,20 +2,33 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Figtree", sans-serif;
-  color: hsl(0, 0%, 7%);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.5;
 }
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: hsl(47, 88%, 63%);
   width: 100%;
   height: 100svh;
-  background-color: hsl(47, 88%, 63%);
+}
+@media (min-width: 300px) and (max-width: 768px) {
+  body {
+    padding: 0 24px;
+  }
+}
+
+body {
+  font-family: "Figtree", sans-serif;
+  color: hsl(0, 0%, 7%);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.5;
+}
+@media (min-width: 300px) and (max-width: 768px) {
+  body {
+    font-size: 12px;
+  }
 }
 
 .article {
@@ -28,6 +41,11 @@ body {
   padding: 24px;
   border-radius: 20px;
   box-shadow: 8px 8px 0 0 hsl(0, 0%, 7%);
+}
+@media (min-width: 300px) and (max-width: 768px) {
+  .article {
+    width: 100%;
+  }
 }
 .article_img {
   width: 100%;
@@ -52,13 +70,23 @@ body {
   border-radius: 4px;
   font-weight: 800;
 }
-.article_txt h1 {
+.article_txt-title {
   font-size: 24px;
   font-weight: 800;
+}
+@media (min-width: 300px) and (max-width: 768px) {
+  .article_txt-title {
+    font-size: 20px;
+  }
 }
 .article_txt-description {
   font-size: 16px;
   color: hsl(0, 0%, 42%);
+}
+@media (min-width: 300px) and (max-width: 768px) {
+  .article_txt-description {
+    font-size: 14px;
+  }
 }
 .article_author {
   display: flex;
