--- a/style.scss
+++ b/style.scss
@@ -1,24 +1,9 @@
 @import "./style/variables";
+@import "./style/base";
+@import "./style/mixins";
+@import "./style/typography";
 
-*{
-    margin : 0;
-    padding : 0;
-    box-sizing: border-box;
-    font-family: "Figtree", sans-serif;
-    color : $noir;
-    font-weight : $font-regular;
-    font-size : 14px;
-    line-height : 1.5;
-}
 
-body{
-    display : flex;
-    justify-content: center;
-    align-items: center;
-    width : 100%;
-    height : 100svh;
-    background-color: $jaune;
-}
 
 .article{
     display : flex;
@@ -31,6 +16,10 @@ body{
     border-radius : 20px;
     box-shadow: 8px 8px 0 0 $noir;
 
+    @media (min-width: 300px) and (max-width: 768px) {
+        width : 100%;
+    }
+
     &_img{
         width : 100%;
         height : 200px;
@@ -38,9 +27,7 @@ body{
         overflow : hidden;
 
         img{
-            width : 100%;
-            height : 100%;
-            object-fit: cover;
+            @include image-cover;
         }
     }
 
@@ -57,18 +44,22 @@ body{
             font-weight : $font-bold;
         }
 
-        &-date{
-          
-        }
-
-        h1{
+        &-title{
             font-size : 24px;
             font-weight : $font-bold;
+
+            @media (min-width: 300px) and (max-width: 768px) {
+                font-size: 20px;
+            }
         }
 
         &-description{
             font-size : 16px;
             color : $gris;
+
+            @media (min-width: 300px) and (max-width: 768px) {
+                font-size: 14px;
+            }
         }
     }
 
@@ -83,9 +74,7 @@ body{
             border-radius : 100vmax;
 
             img{
-                width : 100%;
-                height : 100%;
-                object-fit: cover;
+                @include image-cover;
             }
         }
 
