--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,16 @@
     border-radius : 20px;
     box-shadow: 8px 8px 0 0 $noir;
 
+    &:hover, &:focus{
+        cursor : pointer;
+        .article_txt{
+            &-title{
+                color : $jaune;
+            }
+          
+        }
+    }
+
     @media (min-width: 300px) and (max-width: 768px) {
         width : 100%;
     }
